styles/styles.css
@import url('https://fonts.googleapis.com/css?family=Ruda:400,900');

* {
    color: #1B2021;
    font-family: 'Ruda', sans-serif;
}

body {
    background-color: #C2A878;
    background-image: url('/img/cream-pixels.png');
    
    text-align: center;
}

img {
    width: 300px;
    margin: 50px 0 auto;
}

h1 {
    text-shadow: 0 0 3px #1b20216c ;
}

h2 {
    margin-bottom: 0;
}

h3 {
    margin-top: 0;
    text-transform: uppercase;
    letter-spacing: 4px;
    font-weight: normal;
}

h4 {
    margin-bottom: 0;
    text-transform: uppercase;
}

p {
    margin-top: 0;
}

ul {
    list-style: none;
}

.rrss-icon {
    font-size: 32px;
}

.rrss-icon:hover {
    cursor: pointer;
}

aside {
    float: right;
    background-color: #1b20216c;
    padding: 15px;
    text-align: left;
    width: 30%;
    height: 88%;
    position: absolute;
    top: 20px;
    right: 20px;
    border-radius: 5px;
}

.btn-section {
    display: inline-flex;
    height: 50px;
    width: max-content;
}

.skill-button {
    text-decoration: none;
    margin: auto 3px;
}

.skill-button h3 {
    font-weight: bold;
    letter-spacing: normal;
    width: 180px;
    background-color: #1B2021;
    color: #C2A878;
    padding: 10px 25px;
    outline: dashed 3px #C2A878;
    outline-offset: -5px;
}

.skill-button h3:hover {
    animation: emphasize 0.3s;
    animation-timing-function: ease-out;
    animation-fill-mode: forwards;
}

.skill-button h3:not(:hover) {
    animation: un-emphasize 0.3s;
    animation-timing-function: ease-out;
    animation-fill-mode: forwards;
}

@keyframes emphasize {
    to {
        outline-offset: 3px;
        font-size: 22px;
    }
}

@keyframes un-emphasize {
    from {
        outline-offset: 3px;
        font-size: 22px;
    }
    to {
        outline-offset: -5px;
        font-size: 18px;
    }
}


#home-logo {
    border-radius: 20px;
    padding-top: 165px
}

#copy-message {
    position: absolute;
    background-color: #1B2021;
    color: #C2A878;
    font-size: 12px;
    padding: 10px 15px;
    outline: dashed 2px #C2A878;
    outline-offset: -3px;
    display: none;
    top: 0;
    left: 0;
    opacity: 0;
    animation-name: appearDisappear;
    animation-duration: 2s;
}

@keyframes appearDisappear {
    0% {
        opacity: 0;
    }
    33% {
        opacity: 1;
    }
    66% {
        opacity: 1;
    }
    100% {
        opacity: 0;
        display: none;
    }
}

/* Adjustments for mobile */
@media only screen and (max-width: 600px) {
    img {
        width: 250px;
        margin: 30px 0 auto;
    }

    .skill-button h3 {
        font-weight: bold;
        letter-spacing: normal;
        width: 140px;
        background-color: #1B2021;
        color: #C2A878;
        padding: 14px;
        outline: dashed 3px #C2A878;
        outline-offset: -5px;
    }
    
    .skill-button h3:hover {
        animation: emphasize 0.3s;
        animation-timing-function: ease-out;
        animation-fill-mode: forwards;
    }
    
    .skill-button h3:not(:hover) {
        animation: un-emphasize 0.3s;
        animation-timing-function: ease-out;
        animation-fill-mode: forwards;
    }
    
    @keyframes emphasize {
        to {
            outline-offset: 3px;
            font-size: 18px;
        }
    }
    
    @keyframes un-emphasize {
        from {
            outline-offset: 3px;
            font-size: 18px;
        }
        to {
            outline-offset: -5px;
            font-size: 14px;
        }
    }
}

